power button issue fixed on mobile devices

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -213,4 +213,8 @@
   .simon-circle .quadrant-text {
     font-size: 100%;
   }
+
+  .simon-circle .power-button-playing {
+    background-color: #39FF14;
+  }
 }
